schema/testdata/validation_permission_rule_input/schema.keel
model Person {
    fields {
        name Text
    }

    actions {
        create createPerson() with (name) {
            @permission(expression: name == "123")
        }
        create createPersonRhsInput() with (name) {
            @permission(expression: "123" == name)
        }
        update updatePerson(id) with (name) {
            @permission(expression: name == "123")
        }
    }
}
