schema/testdata/errors/permission_rule_input.keel
model Person {
    fields {
        name Text
    }

    actions {
        create createPerson() with (name) {
            //expect-error:37:41:E020:'name' not found
            @permission(expression: name == "123")
        }
        create createPersonRhsInput() with (name) {
            //expect-error:46:50:E020:'name' not found
            @permission(expression: "123" == name)
        }
        update updatePerson(id) with (name) {
            //expect-error:37:41:E020:'name' not found
            @permission(expression: name == "123")
        }
    }
}
